# postgredis

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  commands.rs  main.rs  resp.rs  server.rs
src/client/: commands.rs  event.rs  handler.rs  mod.rs
src/commands/: args.rs  client.rs  error.rs  mod.rs
src/resp/: mod.rs  parser.rs  types.rs
src/server/: commands.rs  handler.rs  mod.rs  server.rs
